# nixos-config

./: .gitignore  LICENSE  README.md  configuration.nix  flake.nix  install.sh  mount.sh  nix.sh  result  setup.sh  shell.nix  tmp.txt  wsl.sh
assets/: Griddle.SC2Hotkeys  Griddles.SC2Hotkeys  Hotkeys.SC2Hotkeys  ley.toml
common/: default.nix  laptop.nix  nixos.nix
common/chromium/: brave.nix  default.nix
common/deluge/: auth
common/fonts/: default.nix
common/games/: README.md  default.nix  misc.nix  xvt.nix
common/git/: default.nix
common/graphical/: default.nix
common/kiwix/: default.nix
common/laptop/: default.nix
common/network/: bluetooth.nix  core.nix  default.nix  mdns.nix  wg-quick.nix  wireless.nix
common/niri/: default.nix
common/qemu/: default.nix
common/slade/: default.nix
common/ssh/: default.nix
common/sunshine/: default.nix
common/sway/: default.nix
home/: default.nix
home-manager/: default.nix
hosts/: README.md
modules/: README.md  alacritty.nix  common.nix  default.nix  desktop.nix  dev-home.nix  dev.nix  gaming.nix  git.nix  graphical-home.nix  graphical.nix  home.nix  internet.nix  laptop-home.nix  laptop.nix  neovim.nix  network.nix  options.nix  theme.nix  thinkpad-home.nix  users.nix  wired.nix  wireless.nix  zsh.nix
modules/virt/virst/: Cargo.toml  default.nix
modules/virt/virst/src/: cli.rs  lib.rs  main.rs
pkgs/: README.md  default.nix
themes/: README.md  dracula.nix  everforest.nix  gruvbox.nix  melange.nix  nord.nix  theme.nix  tokyonight.nix
users/: README.md  wsl.nix  zaechus.nix
(+286 files in other folders)
