[package]
name = "virst"
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Anderson <maxwell.anderson.public@protonmail.com>"]
description = "A helper utility for libvirt and virt-manager"

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }

[profile.release]
panic = "abort"
strip = true
